splitted in partials app.scss

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,3 @@
-
-.main_content {
-  height: 600px;
-}
+@import "partials/_jumbotron";
+@import "partials/_main_nav";
+@import "partials/_main_content";
