--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,23 @@
+.jumbotron {
+  display: flex;
+  justify-content: center;
+}
+
+.main_nav {
+  display: flex;
+  justify-content: center;
+}
+
+.main_nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+.main_nav ul li {
+  margin: 20px;
+}
+
 .main_content {
   height: 600px;
 }
