splitted layout in partials

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.main_nav ul li a {
+  color: #001942;
+  font-family: "Teko", sans-serif;
+  text-decoration: none;
+  font-size: 25px;
+  font-weight: 400;
+}
+
 .jumbotron {
   display: flex;
   justify-content: center;
@@ -15,7 +29,12 @@
 }
 
 .main_nav ul li {
-  margin: 20px;
+  margin: 2px;
+  padding: 20px;
+}
+
+.main_nav ul li:hover {
+  background-color: #B3E5FC;
 }
 
 .main_content {
