--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,5 @@
+@import "partials/_common";
+@import "partials/_typography";
 @import "partials/_jumbotron";
 @import "partials/_main_nav";
 @import "partials/_main_content";
