--- a/resources/sass/partials/_main_content.scss
+++ b/resources/sass/partials/_main_content.scss
@@ -1,3 +1,22 @@
 .main_content {
-  height: 600px;
+  background-repeat: repeat;
+  padding: 60px 0 ;
+  .blog_row {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    h2 {
+      width: 100%;
+      text-align: center;
+      padding: 0 25px;
+    };
+    .card {
+      width: 33.33%;
+      padding: 30px 25px;
+      img {
+        width: 100%;
+      }
+    }
+  }
 }
