--- a/resources/sass/partials/_typography.scss
+++ b/resources/sass/partials/_typography.scss
@@ -7,7 +7,15 @@
         text-decoration: none;
         font-size: 25px;
         font-weight: 400;
+        text-transform: capitalize;
       }
     };
   };
+}
+h2 {
+  font-family: 'Teko', sans-serif;
+  font-size: 65px;
+  font-weight: 300;
+  text-transform: uppercase;
+
 }
