--- a/resources/sass/partials/_typography.scss
+++ b/resources/sass/partials/_typography.scss
@@ -19,3 +19,9 @@ h2 {
   text-transform: uppercase;
 
 }
+h3 {
+  font-family: 'Teko', sans-serif;
+  font-size: 25px;
+  text-transform: uppercase;
+
+}
