--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,4 +3,5 @@
 @import "partials/_jumbotron";
 @import "partials/_main_nav";
 @import "partials/_main_content";
+@import "partials/_home_content";
 @import "partials/_footer";
