added prodotto view

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,4 +4,5 @@
 @import "partials/_main_nav";
 @import "partials/_main_content";
 @import "partials/_home_content";
+@import "partials/_prodotto";
 @import "partials/_footer";
