--- a/public/css/app.css
+++ b/public/css/app.css
@@ -103,7 +103,12 @@ footer {
   opacity: 0;
 }
 
-.main_content .blog_row .card .overlay img {
+.main_content .blog_row .card .overlay a {
+  text-decoration: none;
+  color: #001942;
+}
+
+.main_content .blog_row .card .overlay a img {
   height: 50px;
 }
 
@@ -145,6 +150,19 @@ footer {
 
 .home_content img {
   height: 105%;
+}
+
+.product_container {
+  margin: auto;
+  padding: 30px 0;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.product_container h2 {
+  margin: 20px 0;
 }
 
 footer {
