--- a/resources/sass/partials/_main_content.scss
+++ b/resources/sass/partials/_main_content.scss
@@ -16,6 +16,7 @@
       position: relative;
       width: 33.33%;
       padding: 30px 25px;
+
       img {
         width: 100%;
       };
@@ -32,8 +33,12 @@
         height: calc(100% - 64px);
         background-color: rgba(255,255,0,.5);
         opacity: 0;
-        img {
-          height: 50px;
+        a {
+          text-decoration: none;
+          color: rgba(0,25,66,1);        
+          img {
+            height: 50px;
+          };
         };
       };
       .overlay:hover{
