--- a/resources/sass/partials/_home_content.scss
+++ b/resources/sass/partials/_home_content.scss
@@ -7,6 +7,7 @@
     margin: auto;
 
     .home_col{
+      position: relative;
       display: flex;
       flex-direction: column;
       width: 50%;
@@ -19,6 +20,7 @@
         overflow: hidden;
 
         .home_col2 {
+          position: relative;
           width: 50%;
           height: 100%;
           overflow: hidden;
@@ -31,4 +33,25 @@
   img {
   height: 105%;
   }
-}
+};
+.main_overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+  opacity: 0;
+  img{
+    height: 100px;
+  };
+  p {
+    font-size: 30px;
+  }
+};
+.main_overlay:hover{
+  opacity: .5;
+};
