--- a/public/css/app.css
+++ b/public/css/app.css
@@ -163,7 +163,7 @@ footer {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: #B3E5FC;
   opacity: 0;
 }
 
