--- a/resources/sass/partials/_home_content.scss
+++ b/resources/sass/partials/_home_content.scss
@@ -43,7 +43,8 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: #B3E5FC;
+
   opacity: 0;
   img{
     height: 100px;
