--- a/resources/sass/partials/_prodotto.scss
+++ b/resources/sass/partials/_prodotto.scss
@@ -1,11 +1,55 @@
 .product_container {
   margin: auto;
   padding: 30px 0;
-  width: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #B8DAE4;
   h2 {
     margin: 20px 0;
-  }
+  };
+  .description_wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .short_description {
+      width: 60%;
+      display: flex;
+      flex-wrap: wrap;
+      .short_col {
+        width: 30%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        span {
+          font-size: 40px;
+          font-weight: 200px;
+          line-height: 45px;
+          color: #002d73;
+          font-family: 'Teko', sans-serif;
+        };
+      };
+      .short_col_center {
+        width: 40%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        span {
+          font-size: 40px;
+          font-weight: 200px;
+          line-height: 45px;
+          color: #002d73;
+          font-family: 'Teko', sans-serif;
+        };
+      };
+    };
+    p {
+      width: 60%;
+      margin: 100px 0;
+      font-size: 24px;
+      line-height: 32px;
+      font-weight: 300;
+      color: #002d73;
+    }
+  };
 }
